--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -130,6 +130,12 @@ body {
   outline: 5px dashed rgb(76, 179, 218);
 }
 
+#sessiontable {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
 /*! jQuery UI - v1.10.1 - 2013-03-07*/
 .ui-progressbar {
   margin: 145px 15px 15px 15px;
