--- a/views/start.erb
+++ b/views/start.erb
@@ -56,6 +56,13 @@
   </head>
   <body>
     <svg id="svgCanvas" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" onmouseup="handleMouseUp(evt)" onmousedown="handleMouseDown(evt)" onmousemove="handleMouseMove(evt)">
+      <!-- <marker id="triangle"
+        viewBox="0 0 10 10" refX="0" refY="5" 
+        markerUnits="strokeWidth"
+        markerWidth="4" markerHeight="3"
+        orient="auto">
+        <path d="M 0 0 L 10 5 L 0 10 z" />
+      </marker> -->
       <g id="viewport"></g>
     </svg>
     <script src="svgpan.js"></script>
